# log-whisperer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
examples/aws-elastic-beanstalk/: README.md
examples/aws-elastic-beanstalk/.platform/hooks/postdeploy/: 99_logwhisperer_setup.sh
man/: log-whisperer.1
src/log_whisperer/: __init__.py  cli.py  paths.py  severity.py
src/log_whisperer/notify/: email_smtp.py  telegram.py
src/log_whisperer/sources/: __init__.py  _subprocess.py  compose.py  docker.py  journal.py
src/logwhisperer/: __init__.py  cli.py  core.py  normalize.py  paths.py  report.py  severity.py  state.py
src/logwhisperer/notify/: __init__.py  dispatch.py  email_smtp.py  ntfy.py  telegram.py
src/logwhisperer/sources/: __init__.py  _subprocess.py  compose.py  docker.py  file.py  journal.py
tests/: conftest.py  test_cli.py  test_core.py  test_dispatch.py  test_normalize.py  test_report.py  test_severity.py  test_sources.py  test_state.py  test_subprocess.py
